<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ChMate Substitute</string>

    <!-- SettingsActivity.kt -->
    <string name="settings_title">設定</string>
    <string name="permission_error_toast_text">権限の取得に失敗しました。</string>
    <string name="about_description">ChMateの書き込みを肩代わりするアプリ。</string>

    <!-- PostActivity.kt -->
    <string name="post_success_toast_text">書き込みに成功しました。</string>
    <string name="post_failed_toast_text">書き込みに失敗しました。</string>

    <!-- layout/activity_post.xml -->
    <string name="post_name_hint">名前</string>
    <string name="post_email_hint">E-mail</string>
    <string name="post_message_hint">本文</string>
    <string name="post_use_cellular_text">モバイルネットワークを使用</string>
    <string name="post_button_text">書き込む</string>

    <!-- menu/post_action.xml -->
    <string name="origin_quote_title">元レスを引用</string>

    <!-- xml/preferences.xml -->
    <string name="use_cellular_title">「モバイルネットワークを使用」を表示</string>
    <string name="user_agent_title">User-Agent</string>
    <string name="user_agent_default">Monazilla/1.00 2chMate/0.8.10.116 Dalvik/2.1.0 (Linux; U; Android 11; Pixel 4a Build/RP1A.201005.006; wv)</string>
    <string name="x_2ch_ua_title">X-2ch-UA</string>
    <string name="x_2ch_ua_default">2chMate/0.8.10.116</string>
    <string name="get_permission_title">idxディレクトリの権限を取得</string>
    <string name="about_title">About</string>
</resources>